[gd_scene load_steps=7 format=3 uid="uid://cgwiml53240ud"]

[ext_resource type="Script" uid="uid://c5o6v2kfhmxy2" path="res://scenes/interactibles/enemy/enemy.gd" id="1_2hhu8"]
[ext_resource type="Texture2D" uid="uid://cbyivm5u65p5m" path="res://assets/art/icons/heart_icon.png" id="3_ne0y3"]
[ext_resource type="Texture2D" uid="uid://ctiroj6p3w3pu" path="res://assets/art/icons/sword_icon.png" id="4_iyn02"]
[ext_resource type="Texture2D" uid="uid://d37icpms0tda4" path="res://assets/art/icons/shield_icon.png" id="5_5w4xj"]
[ext_resource type="Texture2D" uid="uid://d3bdd1qy8qicq" path="res://assets/art/icons/crossed_swords.png" id="5_ne0y3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b87e6"]
size = Vector2(32, 32)

[node name="BiomeEntityScene" type="Area2D"]
collision_layer = 2
collision_mask = 0
monitoring = false
script = ExtResource("1_2hhu8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_b87e6")

[node name="Sprite2D" type="Sprite2D" parent="."]
offset = Vector2(0, -8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 14.0
offset_top = -21.0
offset_right = 51.0
offset_bottom = 59.0
scale = Vector2(0.5, 0.5)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HPIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ne0y3")
expand_mode = 2

[node name="HPLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DamageIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("4_iyn02")
expand_mode = 2

[node name="DamageLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ArmorIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
texture = ExtResource("5_5w4xj")
expand_mode = 2

[node name="ArmorLabel" type="Label" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DamageToPlayerLabelIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
texture = ExtResource("5_ne0y3")
expand_mode = 2

[node name="DamageToPlayerLabel" type="Label" parent="VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
text = "1"
